tests/paczka1/fuzzy1/85172817.err
Error in line 3: 4Jw S625 74,3
Error in line 14: 4Jw S713 -2,4
Error in line 13: xHfVHA S713 94,0
Error in line 2: 8DjnoR03 S713 89,4
Error in line 10: 4Jw S713 81,3
Error in line 7: Dk2 S713 405,7
